  value.
- Reduced the size of the surface selection texture, allowing selection to work with larger
  surfaces.
- Fixed QAbstract3DGraph::renderToImage in OpenGL ES2 environments.
- Fixed crash when attempting to enable slicing without row/column selection modes.
- QCustom3DLabels now use the same shader as other labels, which means the specular highlight
  no longer makes camera facing custom labels unreadable with some themes.
- Made various selection queries thread safe.
- Fixed selection query synchronization issue when using threaded renderer.
- Font size is automatically reduced if the label gets too wide to fit the label texture.
- Fixed the ordering of the subviews.
- Fixed surface normals in cases where the surface values were not in the same order
  (ascending or descending) along both axes.
- Fixed a crash when removing and changing items on the same render frame.
- Fixed an issue with grid line color on surface graphs.
- Prevented selecting bars through the floor in bar graphs.
- Fixed recurring GL_INVALID_VALUE OpenGL errors.
- Improved the surface shadows.
- Fixed the OpenGL context cleanup upon renderer destruction.
- Fixed scatter item autosizing when adding a new series.
- Fixed a crash related to selection render buffer reuse.
- Fixed the flipped Z-coordinate for absolutely positioned custom items.
- Fixed shadows when viewing the graph directly from above or below.

New examples
------------

- Qmlspectrogram example added. It shows how to display 2D spectrogram using surface graph with
  gradients and orthographic projection. Also demonstrates the use of polar axes.
- Bars example now demonstrates zooming to selection, which leverages the new ability to
  control the camera target.
- Textured surface example added.
- Volumetric example added. It shows how to use the new QCustom3DVolume object to visualize
  volumetric data.
- Reflection added to Bars and Customproxy examples.
- Custom camera targeting added to Bars example.