@@ -142,7 +142,7 @@ void Drawer::drawObject(ShaderHelper *shader, AbstractObjectHelper *object, GLui
     glBindBuffer(GL_ELEMENT_ARRAY_BUFFER, object->elementBuf());
 
     // Draw the triangles
-    glDrawElements(GL_TRIANGLES, object->indexCount(), object->indicesType(), (void*)0);
+    glDrawElements(GL_TRIANGLES, object->indexCount(), GL_UNSIGNED_INT, (void*)0);
 
     // Free buffers
     glBindBuffer(GL_ARRAY_BUFFER, 0);
@@ -177,7 +177,7 @@ void Drawer::drawSelectionObject(ShaderHelper *shader, AbstractObjectHelper *obj
     glBindBuffer(GL_ARRAY_BUFFER, object->vertexBuf());
     glVertexAttribPointer(shader->posAtt(), 3, GL_FLOAT, GL_FALSE, 0, (void *)0);
     glBindBuffer(GL_ELEMENT_ARRAY_BUFFER, object->elementBuf());
-    glDrawElements(GL_TRIANGLES, object->indexCount(), GL_UNSIGNED_SHORT, (void *)0);
+    glDrawElements(GL_TRIANGLES, object->indexCount(), GL_UNSIGNED_INT, (void *)0);
     glBindBuffer(GL_ELEMENT_ARRAY_BUFFER, 0);
     glBindBuffer(GL_ARRAY_BUFFER, 0);
     glDisableVertexAttribArray(shader->posAtt());
@@ -194,7 +194,7 @@ void Drawer::drawSurfaceGrid(ShaderHelper *shader, SurfaceObject *object)
     glBindBuffer(GL_ELEMENT_ARRAY_BUFFER, object->gridElementBuf());
 
     // Draw the lines
-    glDrawElements(GL_LINES, object->gridIndexCount(), object->indicesType(), (void*)0);
+    glDrawElements(GL_LINES, object->gridIndexCount(), GL_UNSIGNED_INT, (void*)0);
 
     // Free buffers
     glBindBuffer(GL_ARRAY_BUFFER, 0);
